# fa

./: .gitignore  README.md  commands.md  conftest.py  elf_loader.py  ida_loader.py  pyproject.toml  pytest.ini  requirements.txt  requirements_testing.txt  setup.py
.github/workflows/: python-app.yml  python-publish.yml
fa/: context.py  fa.py  fa_types.py  fainterp.py  gen-usage.py  ida_launcher.py  ida_plugin.py  types.py  utils.py
fa/commands/: add.py  add_offset_range.py  add_range.py  alias  align.py  aligned.py  and.py  append.py  argument.py  b.py  back.py  back_to_checkpoint.py  checkpoint.py  clear.py  data_refs.py  deref_data.py  find.py  find_bytes.py  find_bytes_ida.py  find_immediate.py  find_str.py  function_end.py  function_lines.py  function_start.py  goto_ref.py  if.py  if_not.py  intersect.py  keystone_find_opcodes.py  keystone_verify_opcodes.py  load.py  locate.py  make_code.py  make_comment.py  make_function.py  make_literal.py  make_offset.py  make_unknown.py  max_xrefs.py  min_xrefs.py  (+38 more)
fa/signatures/test-project/: add_structs.py  alias  dead.sig  dead_str.py  keystone.sig  opcodes-ppc.sig  opcodes.sig  printf.sig  s3.sig  s4.sig  something1.sig  something2.sig  test.sig  xref.sig
fa/signatures/test-project-elf/: append.sig  append2.sig  dead.sig  eloop.sig  history_commands.sig  magic.sig  test-basic.sig  test_dep.dep  test_find.sig
fa/signatures/test-project-ida/: add_structs.py  eloop.dep  eloop.sig  explore.py  find_imm.sig  goto_refs.sig  history_commands.sig  magic.sig  opcodes_filter.sig  printf.sig  run.sig  test-basic.sig  test-ida-context.sig  test_find.sig  xref.sig
ide-completions/sublime/: README.md  sig.sublime-completions
scripts/git/: install.py  pre-commit
tests/: conftest.py
tests/test_commands/: test_elf.py  test_find_bytes.py  test_idalink.py
tests/utils/: mock_fa.py
